--- a/WeatherApp/weather_app/weather_app/src/main/resources/templates/index.html
+++ b/WeatherApp/weather_app/weather_app/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-
     <title>Weather</title>
 </head>
 <body>
@@ -16,27 +15,60 @@
                 <button type="submit" class="search-button">Search</button>    
             </form>
 
+            <div class="radio-buttons-container">
+                <div class="radio-button">
+                    <input type="radio" id="value-K" name="value" value="K" onclick="showTemperature('K')" checked>
+                    <label for="value-K">K</label>
+                </div>
+
+                <div class="radio-button">
+                    <input type="radio" id="value-C" name="value" value="C" onclick="showTemperature('C')">
+                    <label for="value-C">C°</label>
+                </div>
+
+                <div class="radio-button">
+                    <input type="radio" id="value-F" name="value" value="F" onclick="showTemperature('F')">
+                    <label for="value-F">F°</label>
+                </div>
+            </div>    
+
             <div class="information-container">
-                <div>Teperature: <span th:text="${temperature}"></span> K</div>
-                <div>Feels like: <span th:text="${feelsLike}"></span> K</div>
-                <div>Max temperature: <span th:text="${maxTemp}"></span> K</div>
-                <div>Min temperature: <span th:text="${minTemp}"></span> K</div>
-                <div>Pressure: <span th:text="${pressure}"></span> hPa</div>
-                <br>
+                <div id="temperature-K">
+                    <div>Temperature: <span th:text="${temperature}"></span> K</div>
+                    <div>Feels like: <span th:text="${feelsLike}"></span> K</div>
+                    <div>Max temperature: <span th:text="${maxTemp}"></span> K</div>
+                    <div>Min temperature: <span th:text="${minTemp}"></span> K</div>
+                    <div>Pressure: <span th:text="${pressure}"></span> hPa</div>
+                </div>
 
-                <div>Teperature: <span th:text="${temperature_C}"></span> C</div>
-                <div>Feels like: <span th:text="${feelsLike_C}"></span> C</div>
-                <div>Max temperature: <span th:text="${maxTemp_C}"></span> C</div>
-                <div>Min temperature: <span th:text="${minTemp_C}"></span> C</div>
-                <div>Pressure: <span th:text="${pressure_C}"></span> hPa</div>
-                <br>
+                <div id="temperature-C" style="display: none;">
+                    <div>Temperature: <span th:text="${temperature_C}"></span> C°</div>
+                    <div>Feels like: <span th:text="${feelsLike_C}"></span> C°</div>
+                    <div>Max temperature: <span th:text="${maxTemp_C}"></span> C°</div>
+                    <div>Min temperature: <span th:text="${minTemp_C}"></span> C°</div>
+                    <div>Pressure: <span th:text="${pressure_C}"></span> hPa</div>
+                </div>
 
-                <div>Teperature: <span th:text="${temperature_F}"></span> F</div>
-                <div>Feels like: <span th:text="${feelsLike_F}"></span> F</div>
-                <div>Max temperature: <span th:text="${maxTemp_F}"></span> F</div>
-                <div>Min temperature: <span th:text="${minTemp_F}"></span> F</div>
-                <div>Pressure: <span th:text="${pressure_F}"></span> hPa</div>
+                <div id="temperature-F" style="display: none;">
+                    <div>Temperature: <span th:text="${temperature_F}"></span> F°</div>
+                    <div>Feels like: <span th:text="${feelsLike_F}"></span> F°</div>
+                    <div>Max temperature: <span th:text="${maxTemp_F}"></span> F°</div>
+                    <div>Min temperature: <span th:text="${minTemp_F}"></span> F°</div>
+                    <div>Pressure: <span th:text="${pressure_F}"></span> hPa</div>
+                </div>
             </div>
         </center>
+
+    <script>
+        function showTemperature(unit) {
+            // Hide all temperature containers
+            document.getElementById("temperature-K").style.display = "none";
+            document.getElementById("temperature-C").style.display = "none";
+            document.getElementById("temperature-F").style.display = "none";
+
+            // Show selected temperature container
+            document.getElementById("temperature-" + unit).style.display = "block";
+        }
+    </script>
 </body>
 </html>
