--- a/WeatherApp/weather_app/weather_app/src/main/resources/static/css/main.css
+++ b/WeatherApp/weather_app/weather_app/src/main/resources/static/css/main.css
@@ -63,6 +63,57 @@ body{
     transform: scale(1.05);
 }
 
+
+.radio-buttons-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-top: 20px;
+    transition: all 0.3s ease;
+    width: 250px;
+    height: 60px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
+.radio-button {
+    display: flex;
+    text-align: center;
+    width: 50px;
+    height: 40px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}   
+
+.radio-button input {
+    display: none;
+}
+
+.radio-button label {
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: #000;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: 1px solid #000;
+}
+
+.radio-button input:checked + label {
+    background-color: #000;
+    color: white;
+    transform: scale(1.05);
+}
+
+
 .information-container{
     display: flex;
     width: 300px;
